Домашнее задание hw25-di Исправления: 1) Заменил Object exClass = configClass.newInstance(); на Object exClass = configClass.getConstructor().newInstance(); 2) Разделил получение методов и цикл 3-4) Убрал лишние функции получения интерфейса по имени(getMethodFromInterfaceName и getMethodFromInterface) - теперь для поиска нужного компонента использую уже имеющуюся функцию getAppComponent 5) Переделал ArrayList в Array 6) Унифицировал поиск компонента