@@ -7,7 +7,6 @@ import ru.otus.appcontainer.api.AppComponentsContainerConfig;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class AppComponentsContainerImpl implements AppComponentsContainer {
 
@@ -23,12 +22,14 @@ public class AppComponentsContainerImpl implements AppComponentsContainer {
         // You code here...
         // создаём инстанс конфигурационного класса
         try {
-            Object exClass = configClass.newInstance();
-            // проходимся по методам, отсортированным по полю order в аннотации
-            for ( Method method : Arrays.stream(configClass.getMethods())
+            Object exClass = configClass.getConstructor().newInstance();
+            // получим методы, с учётом соротировки по полю order в аннотации
+            Method[] methods = Arrays.stream(configClass.getMethods())
                     .filter(method -> method.isAnnotationPresent(AppComponent.class))
                     .sorted(Comparator.comparingInt(o ->o.getAnnotation(AppComponent.class).order()))
-                    .toArray(Method[]::new))
+                    .toArray(Method[]::new);
+            // проходимся по методам
+            for ( Method method : methods)
             {
                 // получаем аннотацию
                 AppComponent appComponent = method.getAnnotation(AppComponent.class);
@@ -42,32 +43,20 @@ public class AppComponentsContainerImpl implements AppComponentsContainer {
             throw new RuntimeException(e);
         }
     }
-    // получение интерфейса по классу
-    private String getInterfaceName(Object obj) {
-        return obj.getClass().getInterfaces()[0].getName();
-    }
-
-    // получение метода из списка компонентов по имени интерфейса
-    private Object getMethodFromInterfaceName(String interfaceName) {
-        return appComponents.stream().filter(p ->
-                getInterfaceName(p).equals(interfaceName)
-        ).findFirst().get();
-    }
 
     // метод для вызова переданного метода
     public Object callMethod(Object object, Method method) {
         try {
             method.setAccessible(true);
-            List<Object> paramList = new ArrayList<>();
             Parameter[] params = method.getParameters();
+            Object[] paramList = new Object[params.length];
+            int i = 0;
             // соберём массив параметров(считаем, что все параметры уже есть в списке объектов)
             for (Parameter param : params) {
-                // выберем из списка компонентов метод, имя интерфейса которого совпадает с именем интерфейса параметра
-                paramList.add(
-                        getMethodFromInterfaceName(param.getParameterizedType().getTypeName())
-                );
+                paramList[i] = getAppComponent(param.getType());
+                i++;
             }
-            return method.invoke(object,paramList.toArray());
+            return method.invoke(object,paramList);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -81,17 +70,9 @@ public class AppComponentsContainerImpl implements AppComponentsContainer {
 
     @Override
     public <C> C getAppComponent(Class<C> componentClass) {
-        Object result;
-        // если объект является интерфейсом
-        if (componentClass.isInterface()) {
-            // пытаемся найти по имени класса, если передали аннотацию
-            result = getMethodFromInterfaceName(componentClass.getName());
-        }
-        // иначе достаём имя интерфейса
-        else {
-            result = getMethodFromInterfaceName(componentClass.getInterfaces()[0].getName());
-        }
-        return (C) result;
+        return (C) appComponents.stream().filter(p ->
+                    componentClass.isAssignableFrom(p.getClass())
+                ).findFirst().get();
     }
 
     @Override
